kubernetes/apps/ai/toolhive/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-flux
  namespace: ai
spec:
  hostnames:
    - mcp-flux.${SECRET_DOMAIN_LOCAL}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-flux
          port: 4483
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-homeassistant
  namespace: ai
spec:
  hostnames:
    - mcp-homeassistant.${SECRET_DOMAIN_LOCAL}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-ha
          port: 4483
      matches:
        - path:
            type: PathPrefix
            value: /
